5th attempt to fix z-index bug

--- a/src/components/synopsis.module.css
+++ b/src/components/synopsis.module.css
@@ -10,6 +10,7 @@
     width: 100%;
     height: 50%;
     background: linear-gradient(180deg, rgba(5,1,32,1) 40%, rgba(5,1,32,0) 100%);
+    z-index: 3;
 }
 
 .synBackground {
@@ -20,7 +21,7 @@
     /* * push down the wrapper by half the page*/
     margin: 50% 0 0 0;
     position: relative;
-    z-index: 1;
+    z-index: 5;
 }
 
 
