--- a/src/components/title.module.css
+++ b/src/components/title.module.css
@@ -78,7 +78,6 @@ select {
     animation-iteration-count: 1 !important;
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
-    z-index: 1;
   }
 }
 
@@ -151,7 +150,7 @@ body {
                 scale(1, 0.55);
     filter: blur(.5em); 
     opacity: 0.7;
-    z-index: 1;
+    z-index: -50;
 }
 
 .neonTitle::after {
